# fastapi_boilerplate

./: .dockerignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  example.env  pyproject.toml
app/: main.py
app/core/: database.py
app/core/guards/: authentication.py  authorization.py
app/core/middleware/: current_user.py
app/module/books/: controller.py  entity.py  model.py  service.py
app/module/users/: controller.py  entity.py  model.py  service.py
